Add account exchange code parser input
